--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,4 +13,5 @@ dependencies = [
     "openapi-spec-validator>=0.7.2",
     "opentelemetry-api>=1.39.1",
     "requests>=2.32.5",
+    "sendgrid>=6.12.5",
 ]
