--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,4 +14,5 @@ dependencies = [
     "opentelemetry-api>=1.39.1",
     "requests>=2.32.5",
     "sendgrid>=6.12.5",
+    "tavily-python>=0.7.17",
 ]
