--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "docling>=2.66.0",
     "dotenv>=0.9.9",
     "openai>=2.14.0",
     "openai-agents>=0.6.4",
@@ -15,4 +16,5 @@ dependencies = [
     "requests>=2.32.5",
     "sendgrid>=6.12.5",
     "tavily-python>=0.7.17",
+    "yt-dlp>=2025.12.8",
 ]
