--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "docling>=2.66.0",
     "dotenv>=0.9.9",
     "gspread>=6.2.1",
+    "ollama>=0.6.1",
     "openai>=2.14.0",
     "openai-agents>=0.6.4",
     "openai-core>=0.0.1",
